<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Andrii Kovalchuk
  ~ Copyright (c) 2020. All rights reserved.
  ~ Last modified 10.07.20 19:41
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<resources>
	<!--General-->
	<string name="app_logo" translatable="false">App Logo</string>
	<string name="app_name" translatable="false">roove</string>
	<string name="privacy_policy_url" translatable="false">https://roove.flycricket.io/privacy.html</string>

	<!--Default strings-->
	<string name="default_name" translatable="false">John Doe</string>
	<string name="default_city" translatable="false">Anytown</string>
	<string name="default_message_text" translatable="false">Text another text \n text more text maybe more text \n well</string>

	<!-- Notifications -->
	<string name="notification_channel_id_messages" translatable="false">message_notifications</string>
	<string name="notification_channel_name_messages" translatable="false">Messages</string>
	<string name="notification_channel_description_messages" translatable="false">Message notification</string>

	<string name="notification_channel_id_match" translatable="false">match_notifications</string>
	<string name="notification_channel_name_match" translatable="false">Matches</string>
	<string name="notification_channel_description_match" translatable="false">Match notification</string>

	<!-- CAMERA PERMISSIONS -->
	<string name="permission_camera_explanation">Application needs CAMERA PERMISSION in order to capture image. Please, allow permission.</string>
	<string name="permission_camera_denied">Please enable CAMERA PERMISSION. Go to \nSettings -> Apps -> Permission</string>

	<!-- GALLERY PERMISSIONS -->
	<string name="permission_read_ext_storage_explanation">Application needs READ EXTERNAL STORAGE PERMISSION in order to access your gallery. Please, allow permission.</string>
	<string name="permission_read_ext_storage_denied">Please enable READ EXTERNAL STORAGE PERMISSION. Go to \nSettings -> Apps -> Permission</string>

	<string name="test_profile_about_text" translatable="false">Besides, she’s a got a kind personality and she smiles a lot. All in all, she is rather attractive. People say the same about me, but I think that she is more beautiful than me.</string>

	<!--Layouts hardcoded strings-->
	<string name="auth_slogan1">Find new\nfriends nearby</string>
	<string name="auth_slogan2">Visit interesting\nplaces together!</string>
	<string name="btn_log_in_with_facebook">Log in with Facebook</string>

	<string name="reg_step_1_tv_select_your_gender">Select your gender</string>
	<string name="reg_step_3_tv_specify_your_age">Specify your age</string>
	<string name="reg_step_4_tv_change_name">Do you want to change your name?</string>
	<string name="reg_step_5_tv_choose_city">Choose your city</string>
	<string name="reg_step_final_tv_check_is_correct">Check if everything is correct</string>

	<!-- partner preferences -->
	<string name="tv_ages_you_prefer">Ages you prefer</string>
	<string name="tv_gender_showing">Showing</string>

	<string name="hint_city">City</string>
	<string name="hint_name">Name</string>
	<string name="hint_gender">Gender</string>
	<string name="hint_preferred_gender">Interested in</string>
	<string name="hint_age">Age</string>
	<string name="default_age_text">18</string>
	<string name="reg_btn_back_text">Back</string>
	<string name="btn_done_text">Done</string>

	<!-- Fragment cards strings -->
	<string name="fragment_cards_explanation_text">There is no available users matching your preferences</string>
	<string name="fragment_card_skip_img_description">card skip</string>
	<string name="fragment_card_like_img_description">card like</string>
	<string name="tv_its_a_match">ITS A MATCH!</string>
	<string name="tv_back_to_swiping">Back to swiping</string>

	<!-- Fragment chat strings -->
	<string name="fragment_chat_ed_hint">Message</string>
	<string name="fragment_chat_send_img_description">send message</string>
	<string name="fragment_chat_attach_img_description">send attachment</string>
	<string name="chat_message_sender_avatar_img_description">sender avatar</string>
	<string name="chat_message_sender_attach_img_description">sender_image</string>
	<string name="chat_message_my_avatar_img_description">my avatar</string>
	<string name="chat_message_my_attach_img_description">my image</string>
	<string name="chat_no_messages_explanation">No messages yet…</string>

	<string name="fragment_conversations_explanation_text">There is no started conversations…\n\nText someone first!</string>
	<string name="fragment_pairs_explanation_text">There is no matches…\n\nKeep swiping!</string>

	<string name="fragment_places_explanation">There is no such places in this category</string>

	<string name="description_user_photo">user photo</string>

	<!-- pref genders-->
	<string name="preferredGenderFemale">female</string>
	<string name="preferredGenderEveryone">everyone</string>
	<string name="preferredGenderMale">male</string>

	<!-- my gender -->
	<string name="genderFemale">female</string>
	<string name="genderMale">male</string>

	<string name="btn_settings_edit_delete_my_account_text">DELETE MY ACCOUNT</string>
	<string name="btn_settings_edit_save_text">Save</string>
	<string name="dialog_error_title">Error</string>

	<string name="place_description_header_text">Description</string>
	<string name="profile_about_header_text">About me</string>

	<string name="text_max_length_error">Max length reached</string>
	<string name="text_empty_error">Field must not be empty</string>

	<string name="toast_text_report_success">Report sent successfully\nThank you!</string>
	<string name="toast_text_update_success">Successfully updated</string>
	<string name="toast_text_delete_success">Successfully deleted</string>
	<string name="toast_text_at_least_1_photo_required">At least one photo required.</string>

	<string name="place_detailed_want_to_go_text">Want to go</string>
	<string name="place_detailed_not_interested_text">Not interested</string>

	<string name="places_bars">Bars &amp; pubs</string>
	<string name="places_entertainment">Entertainment</string>
	<string name="places_clubs">Clubs</string>
	<string name="places_restaurants">Restaurants</string>

	<string name="places_api_bars" translatable="false">bar</string>
	<string name="places_api_entertainment" translatable="false">amusement</string>
	<string name="places_api_clubs" translatable="false">clubs</string>
	<string name="places_api_restaurants" translatable="false">restaurants</string>


	<!--city list-->
	<string name="russia_ekb">Yekaterinburg</string>
	<string name="russia_krasnoyarsk">Krasnoyarsk</string>
	<string name="russia_krd">Krasnodar</string>
	<string name="russia_kzn">Kazan</string>
	<string name="russia_msk">Moscow</string>
	<string name="russia_nnv">Nizhny Novgorod</string>
	<string name="russia_nsk">Novosibirsk</string>
	<string name="russia_sochi">Sochi</string>
	<string name="russia_spb">Saint-Petersburg</string>

	<string name="bottom_navigation_places">Places</string>
	<string name="bottom_navigation_pairs">Pairs</string>
	<string name="bottom_navigation_chats">Chats</string>
	<string name="bottom_navigation_settings">Settings</string>

	<string name="dialog_conversation_delete_title">Delete conversation?</string>
	<string name="dialog_conversation_delete_message">This will delete all messages and pair with this user.</string>

	<string name="dialog_profile_delete_title">Do you want to delete your profile?</string>
	<string name="dialog_profile_delete_message">This will delete your entire account information and also all matches and conversations.</string>
	<string name="dialog_delete_btn_positive_text">Delete</string>
	<string name="dialog_delete_btn_negative_text">Cancel</string>

	<string name="dialog_exit_title">Do you wish to log out?</string>
	<string name="dialog_exit_message">This will permanently log you out.</string>
	<string name="dialog_exit_positive_btn_text">Log out</string>
	<string name="dialog_exit_negative_btn_text">Cancel</string>

	<string name="menu_exit">Exit</string>
	<string name="menu_dating_preferences">Dating Preferences</string>
	<string name="menu_unmatch_text">Unmatch</string>
	<string name="menu_report_text">Report</string>

	<string name="material_dialog_picker_camera">Camera</string>
	<string name="material_dialog_picker_gallery">Gallery</string>

	<string name="report_chooser_photos">Ineligible photos</string>
	<string name="report_chooser_behavior">Disrespectful behavior</string>
	<string name="report_chooser_fake">Seems, it is fake</string>
	<string name="text_i_agree_privacy_policy">By logging in I agree with <u>Privacy Policy</u></string>

	<!-- api resources -->
	<string name="city_api_ekb" translatable="false">ekb</string>
	<string name="city_api_krasnoyarsk" translatable="false">krasnoyarsk</string>
	<string name="city_api_krd" translatable="false">krd</string>
	<string name="city_api_kzn" translatable="false">kzn</string>
	<string name="city_api_msk" translatable="false">msk</string>
	<string name="city_api_nnv" translatable="false">nnv</string>
	<string name="city_api_nsk" translatable="false">nsk</string>
	<string name="city_api_spb" translatable="false">spb</string>
	<string name="city_api_sochi" translatable="false">sochi</string>

</resources>