<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:foreground="?attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fragment_card_item_img_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fragment_card_item_img_description"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/fragment_card_item_gradation_black">

        <TextView
            android:id="@+id/fragment_card_item_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name"
            style="@style/regular_text_white_24sp_85op"/>

        <TextView
            android:id="@+id/fragment_card_item_text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_city"
            style="@style/regular_text_white_20sp_85op"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/left_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_card_item_overlay_black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/fragment_card_skip_img_description"
            android:src="@drawable/fragment_card_item_skip_white_120dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/right_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_card_item_overlay_black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/fragment_card_like_img_description"
            android:src="@drawable/fragment_card_item_like_white_120dp" />

    </FrameLayout>


</androidx.cardview.widget.CardView>