<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Andrii Kovalchuk
  ~ Copyright (c) 2020. All rights reserved.
  ~ Last modified 08.04.20 19:04
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/authContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:paddingBottomSystemWindowInsets="@{true}"
		>



		<ImageView
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:scaleType="centerCrop"
			android:src="@drawable/background"
			tools:ignore="ContentDescription"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>


		<TextView
			android:id="@+id/tvAuthSlogan_1"
			android:maxLines="2"
			android:text="@string/auth_slogan1"

			app:paddingTopSystemWindowInsets="@{true}"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.1"
			style="@style/auth_slogan1"/>


		<TextView
			android:id="@+id/tvAuthSlogan_2"
			android:text="@string/auth_slogan2"
			android:textAlignment="center"

			app:layout_constraintBottom_toTopOf="@id/btnFacebookLoginDelegate"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvAuthSlogan_1"
			app:layout_constraintVertical_bias="0.7"
			style="@style/auth_slogan2"/>


		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnFacebookLoginDelegate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/general_size_16dp"

			android:text="@string/btn_log_in_with_facebook"
			android:textAllCaps="false"
			android:textAppearance="@style/medium_text"
			android:textSize="18sp"

			app:backgroundTint="@color/myFacebookColor"
			app:icon="@drawable/ic_facebook_logo"
			app:cornerRadius="8dp"
			app:rippleColor="@color/black_50"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvAuthSlogan_1"
			app:layout_constraintVertical_bias="0.8"/>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/tvOpenPolicies"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:textColor="@color/colorPrimaryLight"

			android:text="@string/text_i_agree_privacy_policy"
			android:textAlignment="center"
			android:textAppearance="@style/light_text"
			android:textSize="14sp"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/btnFacebookLoginDelegate"

			/>

		<com.facebook.login.widget.LoginButton
			android:id="@+id/btnFacebookLogin"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:visibility="gone"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>