<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Andrii Kovalchuk
  ~ Copyright (c) 2020. All rights reserved.
  ~ Last modified 31.12.20 17:52
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="photoUrl"
			type="String" />

		<variable
			name="name"
			type="String" />

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/dialogMatchContainer"
		android:background="@color/colorPrimaryDark"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		>

		<TextView android:id="@+id/tvItIsMatch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:paddingTopSystemWindowInsets="@{true}"

			android:text="@string/tv_its_a_match"
			android:textSize="24sp"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintVertical_bias="0.1"
			/>

		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/matched_photo"
			android:layout_width="300dp"
			android:layout_height="300dp"
			android:contentDescription="@string/description_user_photo"

			app:bindImageUrl="@{photoUrl}"
			app:shapeAppearanceOverlay="@style/MyAppShapeAppearanceOverlay.Circle"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvItIsMatch"
			app:layout_constraintBottom_toTopOf="@id/tvMatchedName"
			app:layout_constraintVertical_bias="0.3"
			/>

		<TextView android:id="@+id/tvMatchedName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:text="@{name, default = @string/default_name}"
			android:textSize="28sp"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/matched_photo"
			app:layout_constraintBottom_toTopOf="@id/tvMatchDialogBack"
			app:layout_constraintVertical_bias="0.7"
			/>

		<TextView android:id="@+id/tvMatchDialogBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			app:paddingBottomSystemWindowInsets="@{true}"

			android:fontFamily="@font/rubik_bold"
			android:text="@string/tv_back_to_swiping"
			android:textColor="@color/gradient1"
			android:textSize="28sp"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvMatchedName"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintVertical_bias="0.9"
			/>


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>