<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Andrii Kovalchuk
  ~ Copyright (C) 2020. roove
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses
  -->

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="com.mmdev.roove.ui.SharedViewModel" />

	</data>


	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorPrimaryDark">

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="false"
			android:overScrollMode="never"
			android:fillViewport="true">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/containerSettings"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:animateLayoutChanges="true"
				app:paddingTopSystemWindowInsets="@{true}">

				<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbarSettings"
					android:layout_width="0dp"
					android:layout_height="?actionBarSize"
					android:background="@color/colorPrimary"

					app:menu="@menu/settings_menu"

					app:title="@string/bottom_navigation_settings"
					app:titleTextAppearance="@style/ToolbarTitle"
					app:titleTextColor="@color/white"


					app:layout_constraintBottom_toTopOf="@id/rvSettingsUserPhotosList"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					/>

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rvSettingsUserPhotosList"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:clipToPadding="false"
					android:orientation="horizontal"
					android:overScrollMode="never"

					app:bindData="@{viewModel.currentUser.photoURLs}"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/toolbarSettings"

					tools:listitem="@layout/fragment_settings_photo_item" />

				<!-- add a photo -->
				<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:id="@+id/fabSettingsAddPhoto"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_add_a_photo_24dp"

					app:backgroundTint="@color/material_orange_a700"
					app:elevation="@null"

					app:layout_constraintBottom_toBottomOf="@id/rvSettingsUserPhotosList"
					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/rvSettingsUserPhotosList"
					/>


				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/tvSettingsNameAge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"

					android:text="@{viewModel.currentUser.baseUserInfo.name+ `, `+ viewModel.currentUser.baseUserInfo.age, default = @string/default_name}"
					android:textSize="22sp"

					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/fabSettingsAddPhoto"
					app:layout_constraintBottom_toTopOf="@id/tvSettingsCity"/>

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/tvSettingsCity"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"

					android:text="@{viewModel.currentUser.cityToDisplay, default = @string/default_city}"
					android:textSize="22sp"


					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/tvSettingsNameAge"
					app:layout_constraintBottom_toTopOf="@id/tvSettingsWantToGoHeader"
					/>

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/tvSettingsWantToGoHeader"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:padding="16dp"

					android:text="@string/place_detailed_want_to_go_text"
					android:textSize="24sp"

					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/tvSettingsCity"
					app:layout_constraintBottom_toTopOf="@id/rvSettingsWantToGoList"
					/>

				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/rvSettingsWantToGoList"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:clipToPadding="false"
					android:padding="8dp"
					android:orientation="horizontal"
					android:visibility="visible"

					app:bindData="@{viewModel.currentUser.placesToGo}"

					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tvSettingsWantToGoHeader"
					app:layout_constraintBottom_toTopOf="@id/tvSettingsAboutHeader"

					tools:listitem="@layout/fragment_profile_places_rv_item"/>

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/tvSettingsAboutHeader"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:padding="16dp"

					android:text="@string/profile_about_header_text"
					android:textSize="24sp"

					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/rvSettingsWantToGoList"
					/>

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/tvSettingsAboutText"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="100dp"

					android:text="@{viewModel.currentUser.aboutText}"
					android:textSize="18sp"

					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
					app:layout_constraintStart_toStartOf="@id/guidelineStart"
					app:layout_constraintTop_toBottomOf="@id/tvSettingsAboutHeader"
					app:layout_constraintBottom_toBottomOf="parent"
					/>


				<!-- left padding -->
				<androidx.constraintlayout.widget.Guideline
					android:id="@+id/guidelineStart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					app:layout_constraintGuide_begin="8dp" />

				<!-- right padding -->
				<androidx.constraintlayout.widget.Guideline
					android:id="@+id/guidelineEnd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					app:layout_constraintGuide_end="8dp" />


			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.core.widget.NestedScrollView>

		<!-- edit -->
		<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/fabSettingsEdit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="24dp"
			android:src="@drawable/ic_create_24dp"
			app:layout_anchor="@id/containerSettings"
			app:layout_anchorGravity="bottom|end"

			app:backgroundTint="@color/amethyst"

			/>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>